resolve conflict and modified scss to remove the scrollbar at the footer

--- a/src/app/modules/settings/components/settings-page/settings-page.component.scss
+++ b/src/app/modules/settings/components/settings-page/settings-page.component.scss
@@ -1,12 +1,15 @@
 @use "styles/theme/theme.variables" as *;
 
 :host {
-  width: 100%;
-  height: 100%;
-  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 16px 30px;
+
   ::ng-deep card {
-    max-width: 92%;
+    max-width: 96%;
     height: 100%;
+    width: 100%;
     min-height: fit-content;
   }
 }
@@ -15,6 +18,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  flex: 1;
   gap: 24px;
 
   .settings-header {
@@ -40,23 +44,21 @@
       }
     }
   }
-
   .settings-content {
     display: flex;
     flex-direction: column;
     gap: 24px;
+    flex: 1;
 
     app-tab-list {
       border-bottom: 1px solid $border-color;
       margin: 0 -24px;
       padding: 0 24px;
-    }
-
-    .tab-content {
+    }    .tab-content {
       display: flex;
       flex-direction: column;
       gap: 24px;
+      flex: 1;
     }
   }
-  
 }
